# maafw-rs

./: Cargo.toml  README_en.md  Readme.md  Readme_en.md  TODO.md
docs/: FFI编写参考资料.md
examples/: demo.rs
maafw-sys/: Cargo.toml  build.rs
maafw-sys/examples/: unsafe_demo.rs
maafw-sys/src/: lib.rs
maafw-sys/src/maafw/: def.rs  mod.rs
maafw-sys/src/maafw/instance/: controller.rs  mod.rs  resource.rs
maafw-sys/src/maatk/: config.rs  device.rs  mod.rs
