[package]
name = "maafw-rs"
version = "0.1.0"
edition = "2021"
description = "MaaFramework bindings for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maafw-sys = { path = "maafw-sys", features = ["static"] }

[workspace]
members = ["maafw-sys"]
