[package]
name = "maafw-sys"
version = "0.1.0"
edition = "2021"
description = "Low-level MaaFramework bindings for Rust"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["static"]
static = [] # static or dynamic linking when compile-time linking
runtime = ["libloading"] # loading shared library in runtime


[dependencies]
libc = "0.2"
libloading = { version = "0.8", optional = true }
